[MODINVOICE-613]. Incorrect encumbrances on orders with paid and cancelled invoices (#1180)
* [MODINVOICE-613]. Incorrect encumbrances on orders with paid and cancelled invoices

* [MODINVOICE-613]. Fix pending-to-open strategy, partially update code & tests

* [MODINVOICE-613]. Add pending payments to close-to-open strategy

* [MODINVOICE-613]. Revert collector changes

* [MODINVOICE-613]. Add unit tests

* [MODINVOICE-613]. Add missing nested class

* [MODINVOICE-613]. Fix sonar issues

* [MODINVOICE-613]. Add unrelease code to poLine update

* [MODINVOICE-613]. Add distinct to stream results

* [MODINVOICE-613]. Update comment

* [MODINVOICE-613]. Update holder

* [MODINVOICE-613]. Apply review recommendations